syntax = "proto3";

option go_package = "pb/game";

import "db_base.proto";

message account_database_one_test
{
  option(OptionTableName)  = "account_database_one_test";
  option(OptionPrimaryKey) = "account";
  string account = 1;
  string password = 2;
}

message database_node_db
{
  option(OptionTableName)  = "database_node_db";
  option(OptionPrimaryKey) = "id";
  option(OptionAutoIncrementKey) = "id";
  uint32 id = 1;
  string db_host = 2;
  string db_user = 3;
  string db_password = 4;
  string db_dbname = 5;
  uint32 db_port = 6;
}

message account_database_all_test
{
  repeated account_database_one_test account_password = 1;
}